Put method added
